--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-streamlit-chat
-streamlit-extras
-PyPDF2
-openai
-langchain
+langchain==0.0.201
+openai==0.27.8
+PyPDF2==3.0.1
+python-dotenv==1.0.0
+streamlit==1.23.1
+streamlit_chat==0.0.2.2
+streamlit_extras==0.2.7
